# openZed

./: CMakeLists.txt  Doxyfile  Doxyfile.in  LICENSE  README.md
apps/: CMakeLists.txt
apps/recorder/: CMakeLists.txt  consumer.cpp  consumer.h  image_buffer.cpp  image_buffer.h  main.cpp  openzed_camera.cpp  openzed_camera.h  openzed_camera_control_widget.cpp  openzed_camera_control_widget.h  producer.cpp  producer.h  recorder_main_window.cpp  recorder_main_window.h
src/: CMakeLists.txt  StereoMatcher.cu  StereoMatcher.h  a.conf  confParser.h  datatypes.h  main.cpp  planedetection.cpp  planedetection.h  zedCamera.cpp  zedCamera.h
src/stereo/: CMakeLists.txt  cudaArrayBM.cpp  cudaArrayBM.h  cudaopencvstereo.cpp  cudaopencvstereo.h  opencvstereo.cpp  opencvstereo.h  stereointerface.h
src/stereo/cudaArrayBM/: StereoMatcher.cu  StereoMatcher.h
